[package]
name = "crseo"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Cuda Engined Optics Rust Interface"
repository = "https://github.com/rconan/crseo"
documentation = "https://docs.rs/crseo"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde-pickle = "0.6"
libm = "0.2.1"
roots = "0.0.6"
rayon = "1.4"
log = "0.4.11"
thiserror = "1.0.26"
bincode = "1.3.3"
nalgebra = "0.29.0"
skyangle = "0.1.0"
dosio = { version = "0.1.2", optional = true }
license = "2.0.1"

[features]
dos = ["dosio"]

[build-dependencies]
bindgen = "0.52.0"
ceo = { version = "0.1.0", path = "CEO" }

[dev-dependencies]
simple_logger = "1.11.0"
criterion = "0.3"
bincode = "1.3.2"
gnuplot = "0.0.37"
plotters = "0.3.1"
indicatif = "0.16.2"
complot = { version = "0.3.1", features = ["png"] }

[[bench]]
name = "ceo_benchmark"
harness = false
