[package]
name = "crseo"
version = "0.4.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Cuda Engined Optics Rust Interface"
repository = "https://github.com/rconan/crseo"
documentation = "https://docs.rs/crseo"
readme = "README.md"
categories = ["api-bindings", "science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
ffi = { version = "0.1.0", path = "sys", package = "crseo-sys" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde-pickle = "0.6"
libm = "0.2.1"
roots = "0.0.6"
rayon = "1.4"
log = "0.4.11"
nalgebra = { version = "0.31", optional = true }
thiserror = "1.0.30"
skyangle = "0.1.0"
dosio = { version = "0.1.2", optional = true }

[features]
analytic = ["nalgebra"]

[dev-dependencies]
simple_logger = "1.11.0"
criterion = "0.3"
bincode = "1.3.2"
gnuplot = "0.0.37"
plotters = "0.3.1"
indicatif = "0.16.2"
complot = { version = "0.3.1", features = ["png"] }
env_logger = "0.9.0"
anyhow = "1.0.57"

[[bench]]
name = "ceo_benchmark"
harness = false

[[bin]]
name = "analytic"
required-features = ["analytic"]
