[package]
name = "crseo"
version = "1.0.3"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Cuda Engined Optics Rust Interface"
repository = "https://github.com/rconan/crseo"
documentation = "https://docs.rs/crseo"
readme = "README.md"
categories = ["api-bindings", "science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
ffi = { version = "1.2.0", path = "sys", package = "crseo-sys" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
libm = "0.2.1"
roots = "0.0.8"
rayon = "1.4"
log = "0.4.11"
thiserror = "1.0.48"
skyangle = "0.2.2"
indicatif = "0.17.3"
toml = "0.8.8"
serde-pickle = "1.1.1"
nalgebra = { version = "0.32.6", features = ["serde-serialize"] }

[dev-dependencies]
bincode = "1.3.2"
gnuplot = "0.0.43"
# plotters = "0.3.1"
env_logger = "0.11.1"
anyhow = "1.0.57"
zernike = "0.2.1"
nanorand = "0.7.0"
complot = "0.3.4"
criterion = "0.5.1"

[features]
analytic = []

[[bench]]
name = "ceo_benchmark"
harness = false

[[bench]]
name = "ray_tracing"
harness = false

[[bin]]
name = "analytic"
required-features = ["analytic"]
