[package]
name = "active-optics"
version = "0.1.0"
edition = "2021"

[dependencies]
complot = "0.3.4"
crseo = { version = "1.0.0", path = ".." }
faer = "0.19.1"
serde = { version = "1.0.207", features = ["derive"] }
serde-pickle = "1.1.1"
skyangle = "0.2.2"

[features]
m1 = []
m2 = []
modes = []
rbms = []
on-axis = []
off-axis = []
