[package]
name = "nat"
version = "0.1.0"
edition = "2021"
description = "Nodal ABerration Theory"


[dependencies]
anyhow = "1.0.64"
complot = { version = "0.3.2", path = "../../complot" }
crseo = { version = "0.4.4", path = ".." }
thiserror = "1.0.34"
triangle-rs = { version = "0.2.0", path = "../../triangle-rs" }
