[package]
name = "nat"
version = "0.1.0"
edition = "2021"
description = "Nodal ABerration Theory"


[dependencies]
anyhow = "1.0.64"
complot = { version = "0.3.2", path = "../../complot" }
crseo = { version = "0.4.4", path = ".." }
linya = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde-pickle = "1.1.1"
skyangle = "0.1.2"
thiserror = "1.0.34"
triangle-rs = { version = "0.2.0", path = "../../triangle-rs" }
zernike = "0.2.1"

[profile.release]
debug = true
