[package]
name = "crseo-sys"
version = "1.3.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Cuda Engined Optics Rust Interface"
repository = "https://github.com/rconan/crseo"
documentation = "https://docs.rs/crseo-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science", "simulation"]
keywords = ["telescope", "astronomy"]

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.50"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(bindings)',
    'cfg(docs_rs)',
] }
